[package]
name = "didcomm-protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2"
base64 = "0.13"
didcomm-rs = { version = "0.7.2", git = "https://github.com/decentralized-identity/didcomm-rs" }
did-key = { version = "*" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["serde", "v4"] }

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
